# housing_price_predictor

./: README.md  conf.py  housing_data.csv  housing_predictor_out.csv  housing_predictor_out.txt  index.rst  main.py  pyproject.toml
Multiplication_app/: Multiplication.py  main.py
circle_app/: circle.py
docs/source/: api.rst  conf.py  index.rst
housing_price_predictor/: main.py
housing_price_predictor/dataset/: data.xlsx
src/: main.py
src/classes/: House.py  house.py
src/utils/: read_from_file.py  read_write.py  write_to_file.py
test/: test_circle
tests/: test_Multiplication.py  test_house.py  test_main.py  test_read_from_file.py  test_write_to_file.py
